# CrewAI-Saas

./: .gitignore  Dockerfile  pyproject.toml
crewai_saas/: main.py
crewai_saas/api/: deps.py
crewai_saas/api/api_v1/: api.py
crewai_saas/api/api_v1/endpoints/: agents.py  chats.py  crews.py  employed_crews.py  llms.py  profiles.py  tasks.py  test_items.py  tools.py  users.py
crewai_saas/core/: CrewStatus.py  CycleStatus.py  config.py  cryptographyUtils.py  events.py  exceptions.py  google_auth_utils.py
crewai_saas/core/enum/: CrewStatus.py  CycleStatus.py  MessageRole.py  MessageType.py  __init__.py
crewai_saas/crud/: __init__.py  base.py  crud_crew.py  crud_employed_crew.py  crud_knowledge.py  crud_llm.py  crud_profile.py  crud_published_crew.py  crud_storage.py  crud_task.py  crud_test_item.py  crud_user.py
crewai_saas/model/: __init__.py  auth.py  base.py  crew.py  employed_crew.py  knowledge.py  llm.py  profile.py  published_crew.py  test_item.py  user.py
crewai_saas/schema/: __init__.py  base.py  crew.py  employed_crew.py  llm.py  test_item.py  user.py
crewai_saas/service/: crewAiService.py  crewai.py
crewai_saas/tool/: __init__.py  calculator_tools.py  scrape_web.py  search_tools.py  sec_tools.py  stock_info.py  stock_news.py
newrelic/: Dockerfile
