[tool.poetry]
name = "crewai-saas"
version = "0.1.0"
description = ""
authors = ["jinsim <jinsim726@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
fastapi = "^0.111.1"
uvicorn = "^0.30.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
