[tool.poetry]
name = "crewai-saas"
version = "0.1.0"
description = ""
authors = ["jinsim <jinsim726@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
supabase = "^2.6.0"
python-decouple = "^3.8"
pydantic-settings = "^2.3.4"
supabase-py-async = "^2.5.6"
sec-api = "^1.0.18"
unstructured = "^0.15.0"
yfinance = "^0.2.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
